<resources>
    <string name="app_name">AndroidLabs</string>
    <string name="hello_message">Hellow World!</string>
    <string name="buttonText">I\'m a button</string>
    <string name="login">Login</string>
    <string name="login_name">login name</string>
    <string name="password">Password</string>
    <string name="what_does_this_do">What does this do?</string>
    <string name="checkbox">CheckBox</string>
    <string name="radiobutton">RadioButton</string>
    <string name="log_in">Log In</string>
    <string name="dialog_message">Notice</string>
    <string name="dialog_title">Check Box</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_chat">Start Chat</string>
    <string name="send_button">Send</string>
    <string name="edit_chat">Edit Text</string>
    <string name="new_text">new text</string>
    <string name="weatherForecast">WeatherForecast</string>
    <string name="current_temperature">Current Temperature:</string>
    <string name="max_temp">Max Temp:</string>
    <string name="min_temp">Min Temp:</string>
    <string name="wind_speed">Wind Speed:</string>
    <string name="messageHere">MessageHere</string>
    <string name="ID">ID</string>
    <string name="delete_message">Delete Message</string>
    <string name="toolbar">Toolbar</string>
    <string name="snackbar">SnackBar</string>
    <string name="box">Do you want to go back?</string>
    <string name="option3_message">What is your new message?</string>
    <string name="option3_inputhint">Type here</string>
</resources>
